no longer dependent on jquery

--- a/include/header.html
+++ b/include/header.html
@@ -1,17 +1,17 @@
 <div class="site-header-without-menu">
   <h1>Homepage of Tung Anh Vu</h1>
-  <button class="general-btn" id="main-menu-button"
-          title="open menu">
+  <button onclick="toggleMenu()" class="general-btn" title="toggle menu"
+          id="main-menu-button">
     <i class="fa fa-bars"></i>
   </button>
 </div>
 <div class="site-header-menu">
   <h2>Menu:</h2>
   <ul>
-    <li><a href="https://dirichlet.eu/">Home</a></li>
-    <li><a href="https://dirichlet.eu/competitive-programming.html">Competitive programming</a></li>
-    <li><a href="https://dirichlet.eu/bachelor-thesis.html">Bachelor thesis</a></li>
-    <li><a href="https://dirichlet.eu/bi-zma-tutoring.html">BI-ZMA tutoring</a></li>
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./competitive-programming.html">Competitive programming</a></li>
+    <li><a href="./bachelor-thesis.html">Bachelor thesis</a></li>
+    <li><a href="./bi-zma-tutoring.html">BI-ZMA tutoring</a></li>
   </ul>
 </div>
-<script src="header.js" type="text/javscript"></script>
+<script src="header.js" type="text/javascript"></script>
