correct usage of font awesome

--- a/include/header.html
+++ b/include/header.html
@@ -2,7 +2,7 @@
   <h1>Homepage of Tung Anh Vu</h1>
   <button onclick="toggleMenu()" class="general-btn" title="toggle menu"
           id="main-menu-button">
-    <i class="fa fa-bars"></i>
+    <span class="fa fa-bars"></span>
   </button>
 </div>
 <div class="site-header-menu">
