--- a/style.css
+++ b/style.css
@@ -18,14 +18,6 @@ h1, h2, h3 {
   color: #444;
 }
 
-#main-menu-button {
-  text-decoration: none;
-}
-
-#main-menu-button:active {
-  text-decoration: none;
-}
-
 .site-header-menu {
   display: none;
 }
@@ -37,6 +29,11 @@ h1, h2, h3 {
 }
 
 .site-header #main-menu-button {
+  text-decoration: none;
   padding-top: 0;
-  font-size: 30px;
+  font-size: 12px;
+}
+
+.site-header #main-menu-button:active {
+  text-decoration: none;
 }
