each page can have its own h1 title

--- a/include/header.html
+++ b/include/header.html
@@ -1,5 +1,5 @@
 <div class="site-header-without-menu">
-  <h1>Homepage of Tung Anh Vu</h1>
+  <!-- <h1>__PAGE_TITLE__</h1> -->
   <button onclick="toggleMenu()" class="general-btn" title="toggle menu"
           id="main-menu-button">
     <img src="../images/bars.png">
@@ -9,6 +9,7 @@
   <h2>Menu:</h2>
   <ul>
     <li><a href="./index.html">Home</a></li>
+    <li><a href="./ag1.html">BI-AG1 tutorials (in Czech)</li>
     <li><a href="./competitive-programming.html">Competitive programming</a></li>
     <li><a href="./bachelor-thesis.html">Bachelor thesis</a></li>
     <li><a href="./bi-zma-tutoring.html">BI-ZMA tutoring</a></li>
