class -> id and cleaning

--- a/include/header.html
+++ b/include/header.html
@@ -1,11 +1,11 @@
-<div class="site-header-without-menu">
+<div id="site-header-without-menu">
   <!-- <h1>__PAGE_TITLE__</h1> -->
   <button onclick="toggleMenu()" class="general-btn" title="toggle menu"
           id="main-menu-button">
     <img src="../images/bars.png">
   </button>
 </div>
-<div class="site-header-menu">
+<div id="site-header-menu">
   <h2>Menu:</h2>
   <ul>
     <li><a href="./index.html">Home</a></li>
