--- a/include/head.html
+++ b/include/head.html
@@ -3,4 +3,4 @@
 <meta name="author" content="Tung Anh Vu">
 <meta name="description" content="homepage tung anh vu">
 <title>Homepage of Tung Anh Vu</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
