--- a/include/header.html
+++ b/include/header.html
@@ -2,18 +2,18 @@
   <!-- <h1>__PAGE_TITLE__</h1> -->
   <button onclick="toggleMenu()" class="general-btn" title="toggle menu"
           id="main-menu-button">
-    <img src="../images/bars.png">
+    <img src="/images/bars.png">
   </button>
 </div>
 <hr>
 <div id="site-header-menu">
   <h2>Menu:</h2>
   <ul>
-    <li><a href="./index.html">Home</a></li>
-    <li><a href="./ag1.html">BI-AG1 tutorials (in Czech)</li>
-    <li><a href="./competitive-programming.html">Competitive programming</a></li>
-    <li><a href="./bachelor-thesis.html">Bachelor thesis</a></li>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/ag1.html">BI-AG1 tutorials (in Czech)</li>
+    <li><a href="/competitive-programming.html">Competitive programming</a></li>
+    <li><a href="/bachelor-thesis.html">Bachelor thesis</a></li>
   </ul>
   <hr>
 </div>
-<script src="header.js" type="text/javascript"></script>
+<script src="/header.js" type="text/javascript"></script>
